--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.8.1
 colorama==0.4.6
+dj-database-url==2.1.0
 Django==5.0.4
 flake8==7.0.0
 flake8-html==0.4.3
+gunicorn==22.0.0
 iniconfig==2.0.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
@@ -10,6 +12,7 @@ mccabe==0.7.0
 packaging==24.0
 pillow==10.3.0
 pluggy==1.5.0
+psycopg2-binary==2.9.9
 pycodestyle==2.11.1
 pyflakes==3.2.0
 Pygments==2.18.0
@@ -17,5 +20,8 @@ pytest==8.2.0
 pytest-django==4.8.0
 pytest-html==4.1.1
 pytest-metadata==3.1.1
+python-dotenv==1.0.1
 sqlparse==0.5.0
+typing_extensions==4.11.0
 tzdata==2024.1
+whitenoise==6.6.0
