--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -1,9 +1,12 @@
 name: Python CI
 
-on: push
+on: 
+  push:
+    branches:
+      - develop
 
 jobs:
-  test:
+  build_and_tests:
     runs-on: ubuntu-latest
     env:
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
@@ -41,3 +44,26 @@ jobs:
         with:
           name: test-report
           path: ${{ steps.results.outputs.artifactPath }}
+
+
+  merge_develop_to_main:
+    runs-on: ubuntu-latest
+    needs: build_and_tests
+  
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          token: ${{secrets.PAT}}
+          fetch-depth: 0
+  
+      - name: Set up github
+        run: |
+          git config --global user.name "github_actions"
+          git config --global user.email "actions@github.com"
+  
+      - name: Merge develop branch to main branch
+        run: |
+          git checkout main
+          git merge develop
+          git push origin main
